--- a/current_data_for_website.html
+++ b/current_data_for_website.html
@@ -101,7 +101,7 @@
 </tr>
 <tr class="eventrow">
 <td class="eventname"><p><strong>Cryptozoology and the Paranormal in the Great Lakes</strong></p></td>
-<td class="eventdesc"><p>]</p></td>
+<td class="eventdesc"><p>Come learn about and discuss cryptozoology and the paranormal wonders of the Great Lakes region.</p></td>
 </tr>
 <tr class="eventrow">
 <td class="eventname"><p><strong>Dealing with the Paranormal</strong></p></td>
@@ -310,7 +310,7 @@
 <td class="eventdesc"><p>BluRaven C. Houvener and Gabrielle Gamache-Nettles are at it again. The last year has brought these two aspiring artists some great moments...but that's not what you're here for! Kick back and relax and learn what to do, what not to do and how to manage it all when your artistic ventures hand you lemons (and the answer isn't make lemonade!) Like always your faces are guaranteed to be hurting from how much you'll be laughing!</p></td>
 </tr>
 <tr class="eventrow">
-<td class="eventname"><p><strong>Webcomics 101-Characters/story</strong></p></td>
+<td class="eventname"><p><strong>Webcomics 101-Characters and Story</strong></p></td>
 <td class="eventdesc"><p>Erika Wagner and Laura Cascos have seen it all in the Webcomics community! As the creative minds and executors of the wildly popular Webcomic Sidekick Girl for over 9 years, they are masters at the craft. Join these titans for this first of three panels as they break down the webcomic creation process and have some fun doing it!</p></td>
 </tr>
 <tr class="eventrow">
@@ -318,7 +318,7 @@
 <td class="eventdesc"><p>Did you catch Part 1 (of 3) of the amazing Erika Wagner and Laura Cascos's Webcomics 101 panel? If you did...awesome! If you didn't...off to detention for you! Before you go to detention though, be sure to catch part 2 and learn about logistics and their importance in the Webcomic medium!</p></td>
 </tr>
 <tr class="eventrow">
-<td class="eventname"><p><strong>Webcomics 101-Self promotion</strong></p></td>
+<td class="eventname"><p><strong>Webcomics 101-Self Promotion</strong></p></td>
 <td class="eventdesc"><p>So you've learned from parts 1 and 2 how to make your Webcomic, how to build up the world around your characters and follow it all to completion. What now? You stand alone with your work. It's awesome. The world needs to bask in its awesomeness! What's that? How do you get it to them, you ask? Great question, and here is your answer! Come join Erika Wagner and Laura Cascos for part 3 of 3 of Webcomics 101! </p></td>
 </tr>
 <tr class="eventrow">
@@ -488,7 +488,7 @@
 </tr>
 <tr class="eventrow">
 <td class="eventname"><p><strong>Make a Set of Earrings</strong></p></td>
-<td class="eventdesc"><p>Come play with wire and beads as we create a pair of earrings!  Whether you have created jewelry before or this is your first time, I will guide you step by step in this creative process. Learn how to string beads, and bend wire to create a unique accessory. I will have pierced as well as clips available. </p></td>
+<td class="eventdesc"><p>Come play with wire and beads as we create a pair of earrings!  Whether you have created jewelry before or this is your first time, I will guide you step by step in this creative process. Learn how to string beads, and bend wire to create a unique accessory. While anyone is welcome to attend, a limited number of materials will be provided.  Sign up in advance at Ops. </p></td>
 </tr>
 <tr class="eventrow">
 <td class="eventname"><p><strong>Microprocessor Magic</strong></p></td>
